Sun Jul  8 15:40:44 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: avoid generating CDATA node in document
	  tree when parsed, force generation of text nodes instead.

Sun Jul  8 14:39:27 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/extensions.html: fixed a number of typo found by Dan York
	* libxslt/xsltutils.c: improved the profiling ouput, added the
	  average value too.

Sun Jul  8 00:01:21 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: tryingt to fix a problem raised by Norm

Sat Jul  7 23:19:09 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* config.h.in configure.in: added gettimeofday() check
	* libxslt/transform.c libxslt/xsltInternals.h libxslt/xsltutils.[ch]:
	  profiling works option --profile (or --norman ;)

Sat Jul  7 18:58:56 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/templates.c libxslt/transform.c libxslt/transform.h
	  libxslt/variables.c: big cleanup on the way templates or 
	  template fragments are processed, cleanup of stack building
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/general/bug-4[1-8]-* tests/docs/bug-4[1-8]-*: added a
	  series of regression test for the variable/params lookups
	* libxslt/transform.c libxslt/xsltutils.[ch] libxslt/xsltproc.c:
	  started working on profiling code, there is just invocation counting
	  yet but the framework is in place.

Sat Jul  7 11:20:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/general/bug-40-* tests/docs/bug-40-*: added a specific
	  regression test for the variable scope within templates problem

Sat Jul  7 17:05:00 HKT 2001 Wiliam Brack <wbrack@mmm.com.hk>

	* xsltInternals.h variables.c transform.c:
	  fixed problem with variable scope within templates

Fri Jul  6 17:42:06 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/extensions.html doc/internals.html doc/xslt.html: