@@ -1,0 +1,3 @@
+<tst xmlns="http://example.org/">
+     <doc>Failed</doc>
+</tst>
